# Recoil

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: mod.rs  setup.rs
src/config/: mod.rs
src/security/: mod.rs
src/utils/: constants.rs  fs_detect.rs  logging.rs  mod.rs  os_detect.rs
